--- a/ingressTest/test-service.yaml
+++ b/ingressTest/test-service.yaml
@@ -18,6 +18,14 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+	volumeMounts:
+	- name: nginx-html
+	  mountPath: /usr/share/nginx/html/index.html
+	  subPath: index.html
+      volumes:
+      - name: nginx-html
+	configMap:
+	  name: test-cm
 
 ---
 apiVersion: v1
