--- a/ingressTest/test-service.yaml
+++ b/ingressTest/test-service.yaml
@@ -20,7 +20,7 @@ spec:
         - containerPort: 80
         volumeMounts:
         - name: nginx-html
-          mountPath: /usr/share/nginx/html
+          mountPath: /usr/share/nginx/html/index.html
           subPath: index.html
       volumes:
       - name: nginx-html
